# appandroid_api

APP_android/: local.properties
APP_android/app/: build.gradle
APP_android/app/src/main/: AndroidManifest.xml
APP_android/app/src/main/java/com/example/simpleform/: MainActivity.java
APP_android/app/src/main/res/layout/: activity_main.xml  menu.xml
APP_android/app/src/main/res/values/: strings.xml
APP_android/gradle/wrapper/: gradle-wrapper.properties
api-con-rust/: .env  Cargo.toml  Dockerfile
api-con-rust/src/: db.rs  insertar.rs  main.rs  notificaciones.rs
