[package]
name = "api-con-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls"] }
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"

